cabal-version: 2.2
name: class
homepage: https://github.com/exordium/class#readme
version: 0.1.0.0
category: Exordium
synopsis: Bool signature and compatible types / utils
stability: cursed
bug-reports: https://github.com/exordium/class/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/class

common x
  default-language: Haskell2010
  default-extensions: DataKinds,NoImplicitPrelude,ViewPatterns,PatternSynonyms,RankNTypes,BlockArguments, KindSignatures, PolyKinds, QuantifiedConstraints, GADTs, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, TupleSections, LambdaCase, ConstraintKinds, TypeFamilies, AllowAmbiguousTypes, TypeOperators, OverloadedLabels, ScopedTypeVariables, TypeApplications, BangPatterns, GeneralizedNewtypeDeriving, DeriveAnyClass, DerivingStrategies, DerivingVia, StandaloneDeriving, FunctionalDependencies, DefaultSignatures, MultiWayIf, UndecidableInstances, TypeFamilyDependencies, EmptyCase

library
  import: x
  exposed-modules: Data, Control, Fun, Functor
                 , Types, Type.I, Type.O, Type.K, Type.E, Type.X, Type.Bazaar
                 , Reflect , Reflect.Monoid, Reflect.Mod
  hs-source-dirs: src
  build-depends: base, template-haskell, named, impl, ghc-prim, church
               , containers
